@@ -1,5 +1,8 @@
 2017-10-07  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.js:
+	Modify makeExecuteMessage function.
+
 	* tryXpath/background/try_xpath_background.js:
 	Modify this file. The add-on inserts css to all frames and removes
 	css from all frames.
